src/main/resources/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cosmere-service
  labels:
    app: cosmere-service
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: cosmere-api
